objects/Bulk_Assignment__c.object
<CustomObject>
    <description>This object will be help to manage and stored bulk assignment history</description>
    <fields>
        <fullName>AssignmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignmentOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BulkAssignmentQueue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bulk Assignment Queue</label>
        <referenceTo>Bulk_Assignment_Queue__c</referenceTo>
        <relationshipLabel>Bulk Assignments</relationshipLabel>
        <relationshipName>Bulk_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS / Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bulk Assignments</relationshipLabel>
        <relationshipName>Bulk_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CurrentOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Activity_By__c</fullName>
        <label>Current Activity By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Activity__c</fullName>
        <label>Current Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_To_Bank_Last_1_Month__c</fullName>
        <label>Income To Bank (Last 1 Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Setup_By__c</fullName>
        <label>Last Setup By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Setup_Date__c</fullName>
        <label>Last Setup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Visited_By__c</fullName>
        <label>Last Visited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <label>Port/Pool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Bulk Assignments</relationshipLabel>
        <relationshipName>Bulk_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_SME_Exposure__c</fullName>
        <label>Total SME Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Limit__c</fullName>
        <label>Total SME Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Out__c</fullName>
        <label>Total SME Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bulk Assignment</label>
    <nameField>
        <displayFormat>BulkAssign-{0000000000}</displayFormat>
        <label>Bulk Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>